--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <ol style="color:#ffffff
   font-family:Courier New;
   font-size:20px">
-    <li>Glaitus</li>
+    <li>Galactus</li>
     <li>Astro Chanx</li>
     <li>MrMOON</li>
   </ol>
@@ -43,6 +43,9 @@ font-size:30px">Where i learn html.css.</p>
 <h1 style="color:#ffffff;
 font-family:Courier New">Copy right 2021 MrMOON</h1>
 </center>
+
+<p>check out our video</p>
+
   
 </body>
 </html>
