--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>MrMOON</title>
 </head>
-<body style="background-color:#464646">
+<body style="background-color:#001e4a">
   <center>
   <h1 style="color:#ffffff;
   font-family:Courier New;
@@ -12,7 +12,7 @@
   font-size:20px">Hello My name is MrMOON and i am from myanmar and web developer i code this web on my android device mobile phone bye!</h2>
   <p style="color:#ffffff;
   font-family:Courier New;
-  font-size:10px">What game i play?</p>
+  font-size:16px">What game i play?</p>
   <p style="color:#ffffff;
   font-family:Courier New;
   font-size:15px">i play critical ops and my team is immortal swort(1M5)</p>
@@ -23,25 +23,26 @@
   <ol style="color:#ffffff
   font-family:Courier New;
   font-size:20px">
-    <li>Galactus</li>
-    <li>Astro Chanx</li>
-    <li>MrMOON</li>
+    <li style="color:#ffffff">Galactus</li>
+    <li style="color:#ffffff">Astro Chanx</li>
+    <li style="color:#ffffff">MrMOON</li>
   </ol>
   <center>
   <p style="color:#ff0000;
   font-family:Courier New;
   font-size:30px">MyYOUTUBE</p>
   <a style="color:#ffffff"href="https://youtube.com/channel/UCpH4ql2zwDx0lmco3EimwjA">MrMOON YOUTUBE</a>
-<p style="color:#ff0000;
-font-family:Courier New;
-font-size:30px">Where i learn html.css.</p>
-<a style="color:#ffffff"href="https://youtube.com/c/MSquareProgramming">Click here to learn Html</a>
-</center>
+<br />
+<br />
 
+<img height="100px";
+width="100px"src="D.webp" alt="D" />
+<br />
+<br />
 
-<center>
 <h1 style="color:#ffffff;
-font-family:Courier New">Copy right 2021 MrMOON</h1>
-</center>
+font-family:Courier New;
+font-size:20px;>Copy right 2021 MrMOON</h1>
+  
 </body>
 </html>
