--- a/index.html
+++ b/index.html
@@ -1,48 +1,73 @@
 <html>
 <head>
-  <title>MrMOON</title>
+    <title>MrMOON</title>
+    <style type="text/css" media="all">
+        body {
+            background-image: url("https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80");
+              }
+        button {
+            background-color: #2C0070;
+            padding: 15px 40px;
+            border-radius: 30px;
+            border: 2px solid #44A8A4;
+            
+              }
+    </style>
 </head>
-<body style="background-color:#001e4a">
-  <center>
-  <h1 style="color:#ffffff;
-  font-family:Courier New;
-  font-size:30px">MRMOON</h1>
-  <h2 style="color:#ffffff;
-  font-family:Courier New;
-  font-size:20px">Hello My name is MrMOON and i am from myanmar and web developer i code this web on my android device mobile phone bye!</h2>
-  <p style="color:#ffffff;
-  font-family:Courier New;
-  font-size:16px">What game i play?</p>
-  <p style="color:#ffffff;
-  font-family:Courier New;
-  font-size:15px">i play critical ops and my team is immortal swort(1M5)</p>
-  </center>
-  <p style="color:#ffffff;
-  font-family:Courier New;
-  font-size:23px">Player List</p>
-  <ol style="color:#ffffff
-  font-family:Courier New;
-  font-size:20px">
-    <li style="color:#ffffff">Galactus</li>
-    <li style="color:#ffffff">Astro Chanx</li>
-    <li style="color:#ffffff">MrMOON</li>
-  </ol>
-  <center>
-  <p style="color:#ff0000;
-  font-family:Courier New;
-  font-size:30px">MyYOUTUBE</p>
-  <a style="color:#ffffff"href="https://youtube.com/channel/UCpH4ql2zwDx0lmco3EimwjA">MrMOON YOUTUBE</a>
-<br />
-<br />
 
-<img height="100px";
-width="100px"src="https://yt3.ggpht.com/yti/APfAmoH3lTZId3onSckDxAcv9mSUz9mf1LvWJAiV8pMlgg=s108-c-k-c0x00ffffff-no-rj" alt="D" />
-<br />
-<br />
 
-<h1 style="color:#ffffff;
-font-family:Courier New;
-font-size:20px;>Copy right 2021 MrMOON</h1>
-  
-</body>
-</html>
+
+
+<body>
+    </style>
+    <center>
+        <h1 style="color:#ffffff;
+            font-family:Courier New;
+            font-size:30px">MRMOON</h1>
+        <h2 style="color:#ffffff;
+            font-family:Courier New;
+            font-size:20px">Hello My name is MrMOON and i am from myanmar and web developer i code this web on my android device mobile phone bye!</h2>
+        <p style="color:#ffffff;
+            font-family:Courier New;
+            font-size:16px">
+            What game i play?
+        </p>
+        <p style="color:#ffffff;
+            font-family:Courier New;
+            font-size:15px">
+            i play critical ops and my team is immortal swort(1M5)
+        </p>
+    </center>
+    <p style="color:#ffffff;
+        font-family:Courier New;
+        font-size:23px">
+        Player List
+    </p>
+    <ol style="color:#ffffff
+        font-family:Courier New;
+        font-size:20px">
+        <li style="color:#ffffff">Galactus</li>
+        <li style="color:#ffffff">Astro Chanx</li>
+        <li style="color:#ffffff">MrMOON</li>
+    </ol>
+    <center>
+        <p style="color:#ff0000;
+            font-family:Courier New;
+            font-size:30px">
+            MyYOUTUBE
+        </p>
+        <a style="color:#ffffff"href="https://youtube.com/channel/UCpH4ql2zwDx0lmco3EimwjA"><button type="Youtube">Youtube</button></a>
+        <br />
+        <br />
+
+        <img height="100px";
+        width="100px"src="https://yt3.ggpht.com/yti/APfAmoH3lTZId3onSckDxAcv9mSUz9mf1LvWJAiV8pMlgg=s108-c-k-c0x00ffffff-no-rj" alt="D" />
+        <br />
+        <br />
+
+        <h1 style="color:#ffffff;
+            font-family:Courier New;
+            font-size:20px;>Copy right 2021 MrMOON</h1>
+
+            </body>
+            </html>
