--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             background-image: url("https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80");
               }
         button {
-            background-color: #2C0070;
+            background-color: #ffffffff;
             padding: 15px 40px;
             border-radius: 30px;
             border: 2px solid #44A8A4;
