--- a/index.html
+++ b/index.html
@@ -1,73 +1,74 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <title>MrMOON</title>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <title>MrMOON</title>
+    </head>
     <style type="text/css" media="all">
-        body {
-            background-image: url("https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80");
-              }
-        button {
-            background-color: #ffffffff;
-            padding: 15px 40px;
-            border-radius: 30px;
-            border: 2px solid #44A8A4;
+    body {
+        background-image: url('https://cdn.pixabay.com/photo/2018/08/15/11/57/galaxy-3607885_960_720.jpg');
+    }
+        .b {
+            border-bottom: 2px solid #00FF99;
+            text-align: center;
+            font-family: Courier New;
+            border-radius: 20px;
+        }
+        .a {
+            border: 3px solid ;
+            color: #001737;
+            font-family: Courier New;
+            border-radius: 39px;
+            text-align: center;
+            background-color: background-color: #fad0c4;
+background-image: linear-gradient(315deg, #fad0c4 0%, #f1a7f1 74%);
             
-              }
+;
+        }
+        .m {
+            align: center;
+            color: #000000;
+                background-color: #3A006F;
+                padding: 5px 20px;
+                border: 2px solid #FFFFFF;
+                border-radius: 8px;
+                color: #FFFFFF;
+                font-family: Courier New;
+                border-bottom: 2px solid #0E006w1;
+                filter: drop-shadow(5px 5px 5px #201645);
+        }
+        .N {
+            color: #FFFFFF;
+            text-align: center;
+            font-family: Courier New;
+            text-size-adjust: 10px;
+            size: 10px;
+        }
     </style>
-</head>
-
-
-
-
-<body>
-    </style>
-    <center>
-        <h1 style="color:#ffffff;
-            font-family:Courier New;
-            font-size:30px">MRMOON</h1>
-        <h2 style="color:#ffffff;
-            font-family:Courier New;
-            font-size:20px">Hello My name is MrMOON and i am from myanmar and web developer i code this web on my android device mobile phone bye!</h2>
-        <p style="color:#ffffff;
-            font-family:Courier New;
-            font-size:16px">
-            What game i play?
-        </p>
-        <p style="color:#ffffff;
-            font-family:Courier New;
-            font-size:15px">
-            i play critical ops and my team is immortal swort(1M5)
-        </p>
-    </center>
-    <p style="color:#ffffff;
-        font-family:Courier New;
-        font-size:23px">
-        Player List
-    </p>
-    <ol style="color:#ffffff
-        font-family:Courier New;
-        font-size:20px">
-        <li style="color:#ffffff">Galactus</li>
-        <li style="color:#ffffff">Astro Chanx</li>
-        <li style="color:#ffffff">MrMOON</li>
-    </ol>
-    <center>
-        <p style="color:#ff0000;
-            font-family:Courier New;
-            font-size:30px">
-            MyYOUTUBE
-        </p>
-        <a style="color:#ffffff"href="https://youtube.com/channel/UCpH4ql2zwDx0lmco3EimwjA"><button type="Youtube">Youtube</button></a>
+    <body>
+        <h1 class="b">Welcome</h1>
+        <br />
+        <h3 class="b">I am MrMOON</h3>
+        <br />
+        <div class="a">
+        <h3><a href="https://youtube.com/channel/UCpH4ql2zwDx0lmco3EimwjA"><h3 style="color: #000000">My youtube channel</h3></a></h3>
+        <h3>Sub My youtube channel to get newpc :D</h3>
+        </div>
+        <br />
+        <div class="a">
+        <h3><a href="https://discord.com/api/oauth2/authorize?client_id=889466280573276200&permissions=0&scope=bot"><h3 style="color: #FFFFFF">My discord bot</h3></a></h3>
+        </div>
+        <div align="center">
+        <td align="center">
+        <a href="bot.html"><button class="m" type="button">More about bot</button></a>
+        </td>
+        </div>
         <br />
         <br />
-
-        <img height="100px";
-        width="100px"src="https://yt3.ggpht.com/yti/APfAmoH3lTZId3onSckDxAcv9mSUz9mf1LvWJAiV8pMlgg=s108-c-k-c0x00ffffff-no-rj" alt="D" />
         <br />
         <br />
-
-        <h1 style="color:#ffffff;
-            font-family:Courier New;
-            font-size:20px;>Copy right 2021 MrMOON</h1>
-
-            </body>
-            </html>
+        <br />
+    
+        <a text-align="center" class="N"href="https://www.facebook.com/wadu.hak.10">My facebook acc</a>
+        </body>
+ </html>
