--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             text-align: center;
             font-family: Courier New;
             border-radius: 20px;
+            color: #FFFFFF;
         }
         .a {
             border: 3px solid ;
