--- a/bot.html
+++ b/bot.html
@@ -20,7 +20,7 @@
         <br />
         <br />
         <h1>prefix(=)</h1>
-        <h2>Type (=sus) to get command</h2>
+        <h2>Type (=help) to get command</h2>
         <h2>type-Music bot</h2>
     </body>
 </html>
