--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ background-image: linear-gradient(315deg, #fad0c4 0%, #f1a7f1 74%);
         </div>
         <br />
         <div class="a">
-        <h3><a href="https://discord.com/api/oauth2/authorize?client_id=902466302801760297&permissions=8&scope=bot"</h3></a></h3>
+        <h3><a href="https://discord.com/api/oauth2/authorize?client_id=902466302801760297&permissions=8&scope=bot">my discord bot</a></h3>
         </div>
 <br />
 <br />
